--- a/Peixonaldo Landing Page/index.html
+++ b/Peixonaldo Landing Page/index.html
@@ -14,16 +14,16 @@
         <header>
             <nav id="section-1-nav"> 
                 <a href="#">Home</a>
-                <a href="#">História</a>
-                <a href="#">Sobre</a>
-                <a href="#">Créditos</a>
+                <a href="#section-2">História</a>
+                <a href="#section-3">Sobre</a>
+                <a href="#section-4">Créditos</a>
             </nav>
     
             <div class="section-container">
                 <img src="./img/Logo.png" alt="Logo peixonaldo">
                 <h1>Descubra o mundo de Peixonaldo em um mundo divertido no fundo do mar</h1>
                 <div>
-                    <button type="button">Jogar Agora</button>
+                    <button type="button"><a href="/jogo.html">Jogue Agora</a></button>
                     <button type="button">Saiba Mais</button>
                 </div>
             </div>
